# pulseRTc

./: CHANGELOG.md  MANIFEST.in  README.md  environment.yml  setup.cfg
data/: SAMPLELIST.TXT  config.yaml
scripts/: makefile  makefile.vars
scripts/GRAND-SLAM/: getindex  linkbams  rungs
scripts/R/: install_extra_r_pkgs.R
scripts/R/analysis/: annotate_pulser.R  get_estimates.R  plot_corrm.R  plot_mismatches.R
scripts/R/dge/: run_cellplot.R  run_deseq.R
scripts/R/pulser/: fit_rtc.R  fit_std.R  models.R  prep.R  prep_fc.R  prep_salmon.R  time_pts.R  utils.R
scripts/Salmon/: getindex  runbam2fastq  runsalmonqm
scripts/utils/: callsnps  markdups  reheader  sortnrename
src/pulsertc/: run_all_splbam.py  splbam.py  utils.py
tests/unit/: conftest.py  test_splbam.py
