[metadata]
name = pulsertc
description = "Wrapper and analysis tools to use pulseR with RT conversion data."
long-description = file: README.md
long_description_content_type = text/markdown
version = attr: pulsertc.__version__
url =
author = Etienne Boileau
maintainer = Etienne Boileau
maintainer-email = boileau@uni-heidelberg.de
license = GPLv3
keywords = bioinformatics, rnaseq, metabolic labelling
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: R
    Programming Language :: Unix Shell

[options]
package_dir =
    = src
packages = find:

install_requires =
    numpy
    pandas
    joblib
    pysam
    pyyaml

python_requires = >=3.10

include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    run-all-splbam = pulsertc.run_all_splbam:main
    splbam = pulsertc.splbam:main
